--- a/components/Dropdown/Dropdown.scss
+++ b/components/Dropdown/Dropdown.scss
@@ -1,52 +1,4 @@
-@import '../../variables.scss';
-
-// .dropdown {
-//     height: 70px;
-//     background-color: #FFFFFF;
-//     border-radius: 8px;
-//     box-sizing: border-box;
-//     position: relative;
-//     bottom: -215px;
-//     margin: 0 15px;
-//     padding: 15px 30px;
-
-//     @media screen and (min-width: 1200px) {
-//         width: 232px;
-//         margin-left: auto;
-//         margin-right: 50px;
-//     }
-
-// }
-
-// .sortTitle {
-//     font-family: 'BogleWeb-Bold';
-//     line-height: 40px;
-//     color: $color-purple;
-// }
-
-// .dropdownMenu {
-//     // z-index: 10;
-//     background-color: #FFFFFF;
-//     // border-radius: 0 0 8px 8px;
-//     margin-top: 15px;
-//     width: 100%;
-//     padding: 20px 20px;
-//     ul {
-//         list-style-type: none;
-//         margin: 0;
-//         padding: 0;
-
-//         li {
-//             height: 60px;
-            
-//             &:hover {
-//                 background-color: $color-light-grey;
-//             }
-//         }
-//     }
-// }
-
-
+@import '../../stylesheets/variables.scss';
 
 .dropdown {
     position: relative;
