--- a/components/Hero/Hero.scss
+++ b/components/Hero/Hero.scss
@@ -1,7 +1,7 @@
 .heroContainer {
     height: 420px;
     width: 100%;
-    background: url('/assets/hero_@2x.jpg') no-repeat;
+    background: url('https://moshejs.github.io/walmart-demo/assets/hero_@2x.jpg') no-repeat;
     background-size: cover;
     background-position: 50%;
 
