--- a/components/Layout/Layout.scss
+++ b/components/Layout/Layout.scss
@@ -1,16 +1,21 @@
 .menuOpen {
-    transform: translateY(100vh);
-    transition: 1s ease-out;
-    height: 100vh;
-    width: 100vw;
-    position: fixed;
-    overflow-y: hidden
+    @media screen and (max-width: 769px) {
+        transform: translateY(100vh);
+        transition: 1s ease-out;
+        height: 100vh;
+        width: 100vw;
+        position: fixed;
+        overflow-y: hidden
+    }
  }
 
 .menuClosed {
-    background-color: #E6E7E8;
-    transform: translateY(-100vh);
-    transition: 1s ease-out;
-    position: absolute;
-    overflow-y: visible;
+    @media screen and (max-width: 769px) {
+
+        background-color: #E6E7E8;
+        transform: translateY(-100vh);
+        transition: 1s ease-out;
+        position: absolute;
+        overflow-y: visible;
+    }
 }
