--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -3,15 +3,13 @@
 
 @font-face {
     font-family: 'BogleWeb-Regular';
-    src: url('/assets/fonts/BogleWeb-Regular.woff2') format('woff2'), url('/assets/fonts/BogleWeb-Regular.woff') format('woff'), url('/assets/fonts/BogleWeb-Regular.eot') format('embedded-opentype'), url('/assets/fonts/BogleWeb-Regular.ttf') format('truetype');
+    src: url('https://moshejs.github.io/walmart-demo/fonts/BogleWeb-Regular.woff2') format('woff2'), url('https://moshejs.github.io/walmart-demo/fonts/BogleWeb-Regular.woff') format('woff'), url('https://moshejs.github.io/walmart-demo/fonts/BogleWeb-Regular.eot') format('embedded-opentype'), url('https://moshejs.github.io/walmart-demo/fonts/BogleWeb-Regular.ttf') format('truetype');
 }
   
 @font-face {
     font-family: 'BogleWeb-Bold';
-    src: url('/assets/fonts/BogleWeb-Bold.woff2') format('woff2'), url('/assets/fonts/BogleWeb-Bold.woff') format('woff'), url('/assets/fonts/BogleWeb-Bold.eot') format('embedded-opentype'), url('/assets/fonts/BogleWeb-Bold.ttf') format('truetype');
+    src: url('https://moshejs.github.io/walmart-demo/fonts/BogleWeb-Bold.woff2') format('woff2'), url('https://moshejs.github.io/walmart-demo/fonts/BogleWeb-Bold.woff') format('woff'), url('https://moshejs.github.io/walmart-demo/fonts/BogleWeb-Bold.eot') format('embedded-opentype'), url('https://moshejs.github.io/walmart-demo/fonts/BogleWeb-Bold.ttf') format('truetype');
 }
-
-
 
 
 html {
