--- a/stylesheets/variables.scss
+++ b/stylesheets/variables.scss
@@ -1,11 +1,10 @@
-
-$color-purple: #041E42;
+$color-purple: #041e42;
 $color-blue: #006697;
-$color-teal: #E2F3F7;
-$color-green: #2A8703;
-$color-soft-yellow: #DDE7A0;
-$color-barney-purple: #63327E;
-$color-yellow: #FFC220;
-$color-grey: #6D6E71;
-$color-light-grey: #E6E7E8;
-$color-lighter-grey: #F6F6F6;
+$color-teal: #e2f3f7;
+$color-green: #2a8703;
+$color-soft-yellow: #dde7a0;
+$color-barney-purple: #63327e;
+$color-yellow: #ffc220;
+$color-grey: #6d6e71;
+$color-light-grey: #e6e7e8;
+$color-lighter-grey: #f6f6f6;
