--- a/components/Hero/Hero.scss
+++ b/components/Hero/Hero.scss
@@ -1,27 +1,27 @@
 .heroContainer {
-    height: 420px;
-    width: 100%;
-    background: url('https://moshejs.github.io/walmart-demo/assets/hero_@2x.jpg') no-repeat;
-    background-size: cover;
-    background-position: 50%;
+  height: 420px;
+  width: 100%;
+  background: url("https://moshejs.github.io/walmart-demo/assets/hero_@2x.jpg")
+    no-repeat;
+  background-size: cover;
+  background-position: 50%;
 
-    @media screen and (min-width: 1200px) {
-        width: 100%;
-        height: 600px;
-    }
+  @media screen and (min-width: 1200px) {
+    width: 100%;
+    height: 600px;
+  }
 }
 
-
 .heroTitle {
-    padding-top: 50px;
-    padding-left: 30px;
-    color: #FFFFFF;
+  padding-top: 50px;
+  padding-left: 30px;
+  color: #ffffff;
 
-    @media screen and (min-width: 1200px) {
-        padding-top: 0;
-        padding-bottom: 100px;
-        position: relative;
-        bottom: -400px;
-        margin: 0 15px;
-    }
+  @media screen and (min-width: 1200px) {
+    padding-top: 0;
+    padding-bottom: 100px;
+    position: relative;
+    bottom: -400px;
+    margin: 0 15px;
+  }
 }
