--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -1,45 +1,56 @@
-// @import 'public/fonts.css';
-@import './variables.scss';
+@import "./variables.scss";
 
 @font-face {
-    font-family: 'BogleWeb-Regular';
-    src: url('https://moshejs.github.io/walmart-demo/assets/fonts/BogleWeb-Regular.woff2') format('woff2'), url('https://moshejs.github.io/walmart-demo/assets/fonts/BogleWeb-Regular.woff') format('woff'), url('https://moshejs.github.io/walmart-demo/assets/fonts/BogleWeb-Regular.eot') format('embedded-opentype'), url('https://moshejs.github.io/walmart-demo/assets/fonts/BogleWeb-Regular.ttf') format('truetype');
-}
-  
-@font-face {
-    font-family: 'BogleWeb-Bold';
-    src: url('https://moshejs.github.io/walmart-demo/assets/fonts/BogleWeb-Bold.woff2') format('woff2'), url('https://moshejs.github.io/walmart-demo/assets/fonts/BogleWeb-Bold.woff') format('woff'), url('https://moshejs.github.io/walmart-demo/assets/fonts/BogleWeb-Bold.eot') format('embedded-opentype'), url('https://moshejs.github.io/walmart-demo/assets/fonts/BogleWeb-Bold.ttf') format('truetype');
+  font-family: "BogleWeb-Regular";
+  src: url("https://moshejs.github.io/walmart-demo/assets/fonts/BogleWeb-Regular.woff2")
+      format("woff2"),
+    url("https://moshejs.github.io/walmart-demo/assets/fonts/BogleWeb-Regular.woff")
+      format("woff"),
+    url("https://moshejs.github.io/walmart-demo/assets/fonts/BogleWeb-Regular.eot")
+      format("embedded-opentype"),
+    url("https://moshejs.github.io/walmart-demo/assets/fonts/BogleWeb-Regular.ttf")
+      format("truetype");
 }
 
+@font-face {
+  font-family: "BogleWeb-Bold";
+  src: url("https://moshejs.github.io/walmart-demo/assets/fonts/BogleWeb-Bold.woff2")
+      format("woff2"),
+    url("https://moshejs.github.io/walmart-demo/assets/fonts/BogleWeb-Bold.woff")
+      format("woff"),
+    url("https://moshejs.github.io/walmart-demo/assets/fonts/BogleWeb-Bold.eot")
+      format("embedded-opentype"),
+    url("https://moshejs.github.io/walmart-demo/assets/fonts/BogleWeb-Bold.ttf")
+      format("truetype");
+}
 
 html {
-    background-color: $color-light-grey;
+  background-color: $color-light-grey;
 }
 
 body {
-    max-width: 1440px;
-    margin: 0 auto;
-    font-family: 'BogleWeb-Regular';
+  max-width: 1440px;
+  margin: 0 auto;
+  font-family: "BogleWeb-Regular";
 }
 
 h1 {
-    font-family: 'BogleWeb-Bold';
-    font-size: 28px;
-    line-height: 56px;
-    margin: 0;
+  font-family: "BogleWeb-Bold";
+  font-size: 28px;
+  line-height: 56px;
+  margin: 0;
 
-    @media screen and (min-width: 1200px) {
-        font-size: 60px;
-        line-height: 100px;
-    }
+  @media screen and (min-width: 1200px) {
+    font-size: 60px;
+    line-height: 100px;
+  }
 }
 
 h2 {
-    font-size: 16px;
-    margin: 0;
+  font-size: 16px;
+  margin: 0;
 
-    @media screen and (min-width: 1200px) {
-        font-size: 24px;
-    }
+  @media screen and (min-width: 1200px) {
+    font-size: 24px;
+  }
 }
-
